# MCP-Py-Templates

./: README.md  docker-compose.yml  my_queries.sql  pyproject.toml
etl/: Dockerfile  etl.py  requirements.txt
mcp_project/: app.py
